Fix plack behavior on mobile

--- a/src/css/Intro.css
+++ b/src/css/Intro.css
@@ -141,7 +141,7 @@
 }
 
 @media (max-width: 800px) {
-    .intro .container {
+    .intro .plack {
         max-width: 95vw;
     }
 }
